--- a/VideoColorizerColabArtistic.ipynb
+++ b/VideoColorizerColabArtistic.ipynb
@@ -7,7 +7,7 @@
     "id": "view-in-github"
    },
    "source": [
-    "<a href=\"https://colab.research.google.com/github.com/jantic/DeOldify/blob/VideoColabs/VideoColorizerColabArtistic.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/jantic/DeOldify/blob/VideoColabs/VideoColorizerColabArtistic.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
